# embassy-ha

./: Cargo.toml  README.md
embedded-mqtt/: Cargo.toml
embedded-mqtt/src/: connect_code.rs  field.rs  lib.rs  rx.rs  transport.rs  tx.rs
examples/: binary_sensor.rs  button.rs  constant-temperature.rs  number.rs  random-temperature.rs  sensor.rs  switch.rs  temperature.rs
examples/common/: mod.rs  std_async_tcp.rs
src/: constants.rs  entity.rs  entity_number.rs  entity_sensor.rs  entity_switch.rs  lib.rs  log.rs  transport.rs  unit.rs
src/mqtt/: mod.rs
