[package]
name = "embedded-mqtt"
version = "0.1.0"
edition = "2024"
authors = ["diogo464 <diogo464@d464.sh>"]
description = "mqtt client for embedded devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/diogo464/embassy-ha"
keywords = ["mqtt", "iot", "embedded"]
categories = ["embedded", "network-programming"]

[dependencies]
embedded-io-async = "0.6"
